[package]
name = "vulkan-tutorial-ash"
description = "My result of following vulkan-tutorial with Ash"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.3", features = ["linked"] }
glm = "0.2.3"
winit = "0.29.6"
